--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -5,4 +5,5 @@
     <string name="login_phone_hint">Введите сюда ваш телефон</string>
     <string name="login_enter">Продолжить</string>
     <string name="login_code_hint">Введить код, полученный в SMS</string>
+    <string name="gps_permission_explanation">Для автоматического определения вашего местоположение необходимо разрешение на использование GPS датчика. Если вы хотите предоставить приложению данное разрешение, нажмите \"Принять\"</string>
 </resources>
