--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -10,4 +10,6 @@
     <string name="add_adres">Добавить адрес</string>
     <string name="add_time">Выбрать время</string>
     <string name="start_adres_added">Нажмите, когда выберете откуда вас забрать</string>
+    <string name="add_adres_dialog">Введите адрес, который следует включить в маршрут поездки. Такси поедет по адресам в порядке их добавления в список</string>
+    <string name="add_adres_hint">Введите адрес сюда</string>
 </resources>
