Добавлен новый тост если не веден код

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -13,4 +13,6 @@
     <string name="add_adres_dialog">Введите адрес, который следует включить в маршрут поездки. Такси поедет по адресам в порядке их добавления в список</string>
     <string name="add_adres_hint">Введите адрес сюда</string>
     <string name="ready_to_stop">Нажмите еще раз, что закрыть приложение</string>
+    <string name="incorrect_auth_code">Неверный код</string>
+    <string name="no_auth_code">Вы не ввели код</string>
 </resources>
