Реализован показ загрузки, если юзер ввел данные, но карта поке не готова. Не вызывается, если карта готова к тому моменту, как юзер закончил вводить данные

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -15,4 +15,5 @@
     <string name="ready_to_stop">Нажмите еще раз, что закрыть приложение</string>
     <string name="incorrect_auth_code">Неверный код</string>
     <string name="no_auth_code">Вы не ввели код</string>
+    <string name="download_dialog_text">Загружаем карту</string>
 </resources>
