--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -34,4 +34,7 @@
     <string name="price">Итого к оплате: %1$.2f \u20bd</string>
     <string name="price_in_progress">Итого к оплате: Вычисляем…</string>
     <string name="fragment_history_title">История заказов</string>
+    <string name="ok_alert">Продолжить</string>
+    <string name="cancel_alert_dialog">Отмена</string>
+    <string name="time_now">Сейчас</string>
 </resources>
