--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Такси 500600</string>
+    <string name="app_name">Такси 500700</string>
     <string name="map_menu_item">Я здесь!</string>
     <string name="history_menu_item">История заказов</string>
     <string name="login_phone_hint">Введите сюда ваш телефон</string>
@@ -26,7 +26,7 @@
     <string name="check_order">Все верно?</string>
     <string name="check_order_hint">Проверьте и подтвердите заказ</string>
     <string name="min_tariff">Минималка: %1$d км. Стоимость минималки - %2$.2f \u20bd. Каждый последующий километр - +%3$.2f \u20bd.</string>
-    <string name="calculation">Всего %1$f км. Из них минималка %2$d км + дополнительные %3$f км (%4$.2f \u20bd).</string>
+    <string name="calculation">Всего %1$.0f км. Из них минималка %2$d км + дополнительные %3$.0f км (%4$.2f \u20bd).</string>
     <string name="calculation_in_progress">Путь: вычисляем…</string>
     <string name="time_in_progress">Примерное время поездки: вычисляем…</string>
     <string name="time_m">Примерное время поездки: %1$d мин.</string>
