--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Такси 500700</string>
+    <string name="app_name">Такси 500-700</string>
     <string name="map_menu_item">Я здесь!</string>
     <string name="history_menu_item">История заказов</string>
     <string name="login_phone_hint">Введите сюда ваш телефон</string>
@@ -10,7 +10,7 @@
     <string name="order_ready">Заказать такси</string>
     <string name="add_adres">Добавить адрес</string>
     <string name="add_time">Выбрать время</string>
-    <string name="start_adres_added">Нажмите, когда выберете откуда вас забрать</string>
+    <string name="start_adres_added">Я здесь!</string>
     <string name="add_adres_dialog">Введите адрес, который следует включить в маршрут поездки. Такси поедет по адресам в порядке их добавления в список</string>
     <string name="add_adres_hint">Введите адрес сюда</string>
     <string name="ready_to_stop">Нажмите еще раз, что закрыть приложение</string>
@@ -39,5 +39,5 @@
     <string name="cancel_alert_dialog">Отмена</string>
     <string name="time_now">Сейчас</string>
     <string name="next_button_calc">Вычисляем стоимость</string>
-    <string name="next_button_cash">Заказать такси - %1$.2f \u20bd</string>
+    <string name="next_button_cash">Заказать такси, %1$.2f \u20bd</string>
 </resources>
